[package]
name = "handshake"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "handshake"

[dependencies]
anyhow = "1.0.81"
async-trait = "0.1.77"
bincode = "1.3.3"
bv = { version = "0.11.1", features = ["serde"] }
clap = { version = "4.5.2", features = ["derive"] }
futures-util = "0.3.30"
proptest = "1.4.0"
rustls = "0.20.1"
rustls-pemfile = "2.1.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_derive = "1.0.197"
serde_json = "1.0.114"
solana-bloom = "1.18.6"
solana-sdk = "1.18.6"
test-case = "3.3.1"
thiserror = "1.0.58"
tokio = { version = "1", features = ["full","net"] }
tokio-rustls = "0.23.1"
tokio-tungstenite = "0.21.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
webpki = "0.22.0"
webpki-roots = "0.22.4"
